[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-agent"
version = "0.3.1"

authors = [{ name = "QodoAI", email = "ofir.f@qodo.ai" }]

maintainers = [
  { name = "Ofir Friedman", email = "ofir.f@qodo.ai" },
]

description = "QodoAI PR-Agent aims to help efficiently review and handle pull requests, by providing AI feedbacks and suggestions."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review"]
license = { file = "LICENSE" }

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "aiohttp>=3.12.15",
  "anthropic>=0.69.0",
  "atlassian-python-api>=3.41.4",
  "azure-devops>=7.1.0b3",
  "azure-identity>=1.25.0",
  "boto3>=1.40.45",
  "certifi>=2024.8.30",
  "dynaconf>=3.2.4",
  "fastapi>=0.118.0",
  "GitPython>=3.1.41",
  "google-cloud-aiplatform>=1.38.0",
  "google-generativeai>=0.8.3",
  "google-cloud-storage>=2.10.0",
  "Jinja2>=3.1.6",
  "litellm>=1.77.7",
  "loguru>=0.7.2",
  "msrest>=0.7.1",
  "openai>=1.55.3",
  "PyGithub>=1.59",
  "PyYAML>=6.0.1",
  "python-gitlab>=3.15.0",
  "retry>=0.9.2",
  "starlette-context>=0.3.6",
  "tiktoken>=0.8.0",
  "ujson>=5.8.0",
  "uvicorn>=0.22.0",
  "tenacity>=8.2.3",
  "gunicorn>=23.0.0",
  "pydantic>=2.8.2",
  "html2text>=2024.2.26",
  "giteapy>=1.0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=5.0.0",
  "twine",
  "pre-commit>=4,<5",
]

[project.urls]
"Homepage" = "https://github.com/qodo-ai/pr-agent"
"Documentation" = "https://qodo-merge-docs.qodo.ai/"

[project.scripts]
pr-agent = "pr_agent.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["pr_agent"]

[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

lint.ignore = ["E999", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
tests = []
